introduce expression type handler